--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
           <div class="badges"><span class="badge">Plating</span><span class="badge">Zinc/Nickel/Copper/Brass</span></div>
           <h3 data-i18n-key="card_plating_title">น้ำยาชุบโลหะ</h3>
           <p data-i18n-key="card_plating_desc">เพิ่มความเงางามให้กับชิ้นงาน ซิงค์ นิกเกิล ทองแดง ทองเหลือง และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์</p>
-          <a class="more" href="https://www.baumechemical.com/home/platingcoating" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="PlatingCoating.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Blackening -->
@@ -491,7 +491,7 @@
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
             <li><a href="https://www.baumechemical.com/home/pretreatment">Pretreatment</a></li>
-            <li><a href="platingcoating.html">Plating</a></li>
+            <li><a href="PlatingCoating.html">Plating</a></li>
             <li><a href="https://www.baumechemical.com/home/blackening">Blackening</a></li>
             <li><a href="https://www.baumechemical.com/home/passivation">Passivation</a></li>
             <li><a href="https://www.baumechemical.com/home/polishing">Polishing</a></li>
