update all product pages

--- a/Pretreatment.html
+++ b/Pretreatment.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical</title>
   <meta name="description" content="น้ำยาทำความสะอาดก่อนชุบ: กรดล้างไขมัน ด่างล้างไขมัน และอัลตร้าโซนิค เลือกสูตรให้เหมาะกับวัสดุ/คราบ เพื่อให้ผิวพร้อมชุบ คุณภาพคงที่ ลดของเสีย พร้อมทีมเทคนิคดูแลงานหน้างานจริง">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/home/%E0%B9%80%E0%B8%84%E0%B8%A1%E0%B8%A5%E0%B8%B2%E0%B8%87%E0%B8%9C%E0%B8%A7%E0%B8%87%E0%B8%B2%E0%B8%99%E0%B9%81%E0%B8%9A%E0%B8%9A%E0%B8%81%E0%B8%A3%E0%B8%94%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%94%E0%B8%B2%E0%B8%87-%E0%B8%99%E0%B8%B3%E0%B8%A2%E0%B8%B2%E0%B8%AD%E0%B8%B1%E0%B8%A5%E0%B8%95%E0%B8%A3%E0%B8%B2%E0%B9%82%E0%B8%8B%E0%B8%99%E0%B8%B4%E0%B8%81">
+  <link rel="canonical" href="Pretreatment.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -18,7 +18,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical">
   <meta property="og:description" content="กรด/ด่างล้างไขมัน และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ">
-  <meta property="og:url" content="https://www.baumechemical.com/home/%E0%B9%80%E0%B8%84%E0%B8%A1%E0%B8%A5%E0%B8%B2%E0%B8%87%E0%B8%9C%E0%B8%A7%E0%B8%87%E0%B8%B2%E0%B8%99%E0%B9%81%E0%B8%9A%E0%B8%9A%E0%B8%81%E0%B8%A3%E0%B8%94%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%94%E0%B8%B2%E0%B8%87-%E0%B8%99%E0%B8%B3%E0%B8%A2%E0%B8%B2%E0%B8%AD%E0%B8%B1%E0%B8%A5%E0%B8%95%E0%B8%A3%E0%B8%B2%E0%B9%82%E0%B8%8B%E0%B8%99%E0%B8%B4%E0%B8%81">
+  <meta property="og:url" content="https://www.baumechemical.com/pretreatment">
   <meta property="og:image" content="https://i.imgur.com/QfsLZ0I.jpeg">
   <meta property="og:image:alt" content="Pretreatment cleaning: acid, alkaline and ultrasonic">
   <meta name="twitter:card" content="summary_large_image">
@@ -41,7 +41,7 @@
     "@type":"CollectionPage",
     "name":"Pretreatment Cleaners",
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/home/%E0%B9%80%E0%B8%84%E0%B8%A1%E0%B8%A5%E0%B8%B2%E0%B8%87%E0%B8%9C%E0%B8%A7%E0%B8%87%E0%B8%B2%E0%B8%99%E0%B9%81%E0%B8%9A%E0%B8%9A%E0%B8%81%E0%B8%A3%E0%B8%94%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%94%E0%B8%B2%E0%B8%87-%E0%B8%99%E0%B8%B3%E0%B8%A2%E0%B8%B2%E0%B8%AD%E0%B8%B1%E0%B8%A5%E0%B8%95%E0%B8%A3%E0%B8%B2%E0%B9%82%E0%B8%8B%E0%B8%99%E0%B8%B4%E0%B8%81",
+    "url":"https://www.baumechemical.com/pretreatment",
     "description":"น้ำยาทำความสะอาดก่อนชุบ: กรด ด่าง และอัลตร้าโซนิค"
   }
   </script>
@@ -53,7 +53,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
       {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products"},
-      {"@type":"ListItem","position":3,"name":"Pretreatment Cleaners","item":"https://www.baumechemical.com/home/%E0%B9%80%E0%B8%84%E0%B8%A1%E0%B8%A5%E0%B8%B2%E0%B8%87%E0%B8%9C%E0%B8%A7%E0%B8%87%E0%B8%B2%E0%B8%99%E0%B9%81%E0%B8%9A%E0%B8%9A%E0%B8%81%E0%B8%A3%E0%B8%94%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%94%E0%B8%B2%E0%B8%87-%E0%B8%99%E0%B8%B3%E0%B8%A2%E0%B8%B2%E0%B8%AD%E0%B8%B1%E0%B8%A5%E0%B8%95%E0%B8%A3%E0%B8%B2%E0%B9%82%E0%B8%8B%E0%B8%99%E0%B8%B4%E0%B8%81"}
+      "@type":"ListItem","position":3,"name":"Pretreatment Cleaners","item":"https://www.baumechemical.com/pretreatment"
     ]
   }
   </script>
@@ -190,7 +190,7 @@
             <div class="badges"><span class="badge">Acid Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="acid_title">กรดล้างไขมัน (Acid Degreaser)</h3>
             <p data-i18n-key="acid_desc">น้ำยาเคมีสำหรับล้างคราบไขมัน พร้อมทั้งกัดสนิม บนชิ้นงานโลหะทั่วไป เหมาะกับงานที่ต้องจุ่มแช่ล้างนานๆ โดยไม่ต้องใช้อุณหภูมิมาช่วย ใช้ล้างบนอลูมิเนียม เหล็ก ทองแดง ทองเหลืองและโลหะต่างๆ</p>
-            <a class="more" href="https://www.baumechemical.com/home/pretreatment/acidclean" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="Acidclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -203,7 +203,7 @@
             <div class="badges"><span class="badge">Alkaline Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="alk_title">ผงด่างล้างไขมัน (Alkaline Degreaser)</h3>
             <p data-i18n-key="alk_desc">จัดการคราบน้ำมัน แว๊กซ์ และจาระบีจากการกลึง/ปั๊ม ให้ผิวสะอาดโดยไม่ทำลายเนื้อโลหะ มีคุณสมบัติล้างคราบน้ำมันและสนิมแดงๆ รวมไปถึงรอยสะเก็ด รอยถลอกจากผิวงานอย่างมีประสิทธิภาพ มีทั้งแบบต้มและใช้ไฟฟ้า</p>
-            <a class="more" href="https://www.baumechemical.com/home/pretreatment/soakclean" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="Soakclean.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -216,7 +216,7 @@
             <div class="badges"><span class="badge">Ultrasonic Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="ultra_title">ทำความสะอาดอัลตร้าโซนิค (Ultrasonic)</h3>
             <p data-i18n-key="ultra_desc">สามารถใช้ได้ดีกับระบบล้างอุลตร้าโซนิค ระบบเขย่าขัดและกลิ้งล้าง บนเหล็ก ซิงค์ฉีด และขี้ตะกั่ว ใช้กับงานล้างโลหะ สแตนเลส เหล็ก อลูมิเนียม ซิ้งค์ฉีด งานกัลวาไนซ์ ทองแดง ทองเหลือง แมกนีเซียมและขี้ตะกั่ว</p>
-            <a class="more" href="https://www.baumechemical.com/home/pretreatment/ultrasonic" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="Ultrasonic.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
@@ -286,7 +286,7 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="https://www.baumechemical.com/home/pretreatment">Pretreatment</a></li>
+            <li><a href="Pretreatment.html">Pretreatment</a></li>
             <li><a href="https://www.baumechemical.com/home/platingcoating">Plating</a></li>
             <li><a href="https://www.baumechemical.com/home/blackening">Blackening</a></li>
             <li><a href="https://www.baumechemical.com/home/passivation">Passivation</a></li>
