--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>ผลิตภัณฑ์เคมีงานชุบ โลหะ รมดำ พาสซิเวชัน | Baume Chemical</title>
   <meta name="description" content="เคมีงานชุบและการเตรียมผิวสำหรับอุตสาหกรรม: Pretreatment, Plating, Blackening, Passivation, Strippers, Polishing พร้อมทีมเทคนิคและบริการหน้างานครบวงจร.">
   <meta name="robots" content="index, follow, max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products">
+  <link rel="canonical" href="index.html">
   <meta name="theme-color" content="#2c5e4e">
   <meta property="og:locale" content="th_TH">
   <meta property="og:locale:alternate" content="en_US">
@@ -306,9 +306,9 @@
     <nav class="primary-nav" aria-label="Primary">
       <ul class="menu">
         <li><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
-        <li><a href="aboutus.html" class="nav-link">About us</a></li>
-        <li><a href="/products" class="nav-link">Products</a></li>
-        <li><a href="/contact" class="nav-link">Contact Us</a></li>
+        <li><a href="about-us.html" class="nav-link">About us</a></li>
+        <li><a href="products.html" class="nav-link">Products</a></li>
+        <li><a href="contact-us.html" class="nav-link">Contact Us</a></li>
       </ul>
     </nav>
   </div>
@@ -339,8 +339,8 @@
       <h1 data-i18n-key="hero_title">เคมีงานชุบและการเตรียมผิวครบวงจร</h1>
       <p data-i18n-key="hero_tagline">ตั้งแต่ Pretreatment, Plating, Blackening, Passivation ไปจนถึง Strippers และ Polishing — พร้อมทีมเทคนิคช่วยออกแบบสูตรและควบคุมคุณภาพอ่างชุบให้เหมาะกับไลน์ของคุณ</p>
       <div class="actions">
-        <a class="btn" href="Pretreatment.html" data-i18n-key="btn_products">ดูหมวดผลิตภัณฑ์</a>
-        <a class="btn ghost" href="https://www.baumechemical.com/contact-us" data-i18n-key="btn_consult">ปรึกษาทีมเทคนิค</a>
+        <a class="btn" href="products.html" data-i18n-key="btn_products">ดูหมวดผลิตภัณฑ์</a>
+        <a class="btn ghost" href="contact-us.html" data-i18n-key="btn_consult">ปรึกษาทีมเทคนิค</a>
       </div>
     </div>
   </section>
@@ -478,7 +478,7 @@
       <div class="content">
         <h3 data-i18n-key="band_title">บริการหน้างานโดยทีมเทคนิค</h3>
         <p data-i18n-key="band_text">ช่วยติดตั้งบ่อชุบ วิเคราะห์ความเข้มข้นของสารเคมีในน้ำยา (Titration), วางแผนเติมเคมีหรือเปลี่ยนน้ำยา, และจัดทำมาตรฐานคุณภาพให้ผลิตงานได้สม่ำเสมอ</p>
-        <a class="btn" href="https://www.baumechemical.com/contact-us" data-i18n-key="band_cta">เริ่มต้นใช้งาน</a>
+        <a class="btn" href="contact-us.html" data-i18n-key="band_cta">เริ่มต้นใช้งาน</a>
       </div>
     </div>
   </section>
