update all files

--- a/Acidclean.html
+++ b/Acidclean.html
@@ -263,7 +263,7 @@
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
             <li><a href="Acidclean.html">Pretreatment</a></li>
-            <li><a href="https://www.baumechemical.com/home/platingcoating">Plating</a></li>
+            <li><a href="PlatingCoating.html">Plating</a></li>
             <li><a href="https://www.baumechemical.com/home/blackening">Blackening</a></li>
             <li><a href="https://www.baumechemical.com/home/passivation">Passivation</a></li>
             <li><a href="https://www.baumechemical.com/home/polishing">Polishing</a></li>
