--- a/products.html
+++ b/products.html
@@ -372,7 +372,7 @@
         data-tags="plating; zinc; nickel; copper; brass; white bronze; ไวท์บรอนซ์; ชุบโลหะ"
         data-tds="https://www.baumechemical.com/docs/tds/metal-plating.pdf"
         data-sds="https://www.baumechemical.com/docs/sds/metal-plating.pdf">
-        <a href="https://www.baumechemical.com/home/%E0%B8%99%E0%B8%B3%E0%B8%A2%E0%B8%B2%E0%B8%8A%E0%B8%B8%E0%B8%9A%E0%B9%82%E0%B8%A5%E0%B8%AB%E0%B8%B0" aria-label="ดูรายละเอียด: น้ำยาชุบโลหะ">
+        <a href="PlatingCoating.html" aria-label="ดูรายละเอียด: น้ำยาชุบโลหะ">
           <picture><img src="https://i.imgur.com/DzCh11Q.jpeg" alt="น้ำยาชุบโลหะ (Plating)" loading="lazy" width="1200" height="800"></picture>
         </a>
         <div class="body">
@@ -380,7 +380,7 @@
           <h3 data-i18n-key="card2_t">น้ำยาชุบโลหะ</h3>
           <p class="meta" data-i18n-key="card2_d">สำหรับเหล็ก สังกะสี และโลหะหลากชนิด</p>
           <div class="actions">
-            <a class="btn" data-i18n-key="btn_detail" href="https://www.baumechemical.com/home/%E0%B8%99%E0%B8%B3%E0%B8%A2%E0%B8%B2%E0%B8%8A%E0%B8%B8%E0%B8%9A%E0%B9%82%E0%B8%A5%E0%B8%AB%E0%B8%B0">ดูรายละเอียด</a>
+            <a class="btn" data-i18n-key="btn_detail" href="PlatingCoating.html">ดูรายละเอียด</a>
             <a class="btn ghost" data-i18n-key="btn_quote" href="mailto:baumechemical@gmail.com?subject=ขอใบเสนอราคา: น้ำยาชุบโลหะ">ขอใบเสนอราคา</a>
             <span class="docs-slot"></span>
           </div>
@@ -558,7 +558,7 @@
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
             <li><a href="Pretreatment.html">Pretreatment</a></li>
-            <li><a href="https://www.baumechemical.com/home/platingcoating">Plating</a></li>
+            <li><a href="PlatingCoating.html">Plating</a></li>
             <li><a href="https://www.baumechemical.com/home/blackening">Blackening</a></li>
             <li><a href="https://www.baumechemical.com/home/passivation">Passivation</a></li>
             <li><a href="https://www.baumechemical.com/home/polishing">Polishing</a></li>
