add troubleshooting pages

--- a/Zincplating.html
+++ b/Zincplating.html
@@ -190,7 +190,7 @@
             <div class="badges"><span class="badge">Cyanide</span><span class="badge">ถังกลิ้งและถังแขวน</span></div>
             <h3 data-i18n-key="cya_title">Cyanide Zinc Plating Solution</h3>
             <p data-i18n-key="cya_desc">การกระจายผิวยอดเยี่ยม คุมง่าย ทนต่อการปนเปื้อนน้ำมัน เงาสูง ทำงานได้ในช่วงความหนาแน่นกระแสกว้าง และเข้ากันได้กับโครเมตทุกเฉด เหมาะทั้งถังแขวนและถังกลิ้ง</p>
-            <a class="more" href="https://www.baumechemical.com/home/platingcoating/zincplating/troubleshootingcyanidezinc" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingcyanidezinc.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -203,7 +203,7 @@
             <div class="badges"><span class="badge">Acid (Ammonium)</span><span class="badge">High Coverage</span></div>
             <h3 data-i18n-key="acid_title">Ammonium Acid Zinc Plating</h3>
             <p data-i18n-key="acid_desc">กระจายผิวดีแม้พื้นที่กระแสต่ำ/ซอกลึก เบสและไบร์ทเทนเนอร์ละลายง่าย ล้างออกง่าย ช่วยให้โครเมตยึดติดดี ให้ผิวเงาและความหนาสม่ำเสมอ เหมาะกับถังกลิ้ง/ถังแขวน</p>
-            <a class="more" href="https://www.baumechemical.com/home/platingcoating/zincplating/troubleshootingacidzinc" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingacidzinc.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -216,7 +216,7 @@
             <div class="badges"><span class="badge">Non‑Cyanide</span><span class="badge">NaOH / KOH</span></div>
             <h3 data-i18n-key="ncn_title">Cyanide‑Free Zinc Plating</h3>
             <p data-i18n-key="ncn_desc">ปลอดไซยาไนด์ ลดความเสี่ยงต่อคนและสิ่งแวดล้อม เงาสูง คุมง่าย กระจายผิวดี ใช้ได้กับ NaOH/KOH และชุบได้โดยตรงบนเหล็ก เหล็กผสมตะกั่ว หรือซิงค์ไดคาสต์</p>
-            <a class="more" href="https://www.baumechemical.com/home/platingcoating/zincplating/troubleshootingnoncyanidezinc" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingnoncyanidezinc.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
