add troubleshooting pages

--- a/PlatingCoating.html
+++ b/PlatingCoating.html
@@ -183,7 +183,7 @@
           <p data-i18n-key="zinc_desc">
             สร้างชั้นป้องกันสนิม เงางาม เกาะตัวไว เหมาะกับงานหลุมตื้น โครเมตมีหลายสีและทนสภาพแวดล้อม ใช้แพร่หลายในยานยนต์เพื่อคุ้มค่าและปกป้องชิ้นส่วนหลัก
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/platingcoating/zincplating" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="Zincplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -196,7 +196,7 @@
           <p data-i18n-key="nickel_desc">
             ทั้งแบบมีไฟและไม่ใช้ไฟ เพิ่มความทนสึกหรอ ทนกัดกร่อน และความแข็ง ผิวขาวเงา เหมาะเป็นชั้นรองก่อนชุบอื่น ใช้ได้ทั้งถังกลิ้งและถังแขวน เกาะเร็ว หนา เงา เข้าได้ถึงซอก
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/platingcoating/nickelplating" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="Nickelplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
