add troubleshooting pages

--- a/PlatingCoating.html
+++ b/PlatingCoating.html
@@ -209,7 +209,7 @@
         <p data-i18n-key="copper_desc">
           เพิ่มความนำไฟฟ้า/ความร้อนและการยึดเกาะ เหมาะเป็นชั้นรองก่อนนิกเกิล/โครม ช่วยให้เงา ลดเวลาชุบนิกเกิล และเพิ่มการต้านการกัดกร่อนเมื่อเคลือบโครมทับ
         </p>
-          <a class="more" href="https://www.baumechemical.com/home/platingcoating/copperplating" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="copperplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -222,7 +222,7 @@
           <p data-i18n-key="brass_desc">
             สีทองสวยงาม นิยมกับงานจิวเวลรี่/ตกแต่ง มักเคลือบแลคเกอร์ทับเพื่อกันหมอง ใช้น้ำยาผสมทองแดง-สังกะสีเป็นหลัก
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/platingcoating/brassplating" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="brassplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -235,7 +235,7 @@
           <p data-i18n-key="lacquer_desc">
             กันกัดกร่อนสูง เลือกได้หลายเฉดสี ใช้เดี่ยวได้โดยไม่ต้องชุบโลหะอื่น ทน UV สีไม่ซีดแม้โดนแดดนาน
           </p>
-          <a class="more" href="https://www.baumechemical.com/home/platingcoating/electrophoreticlacquer" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="electrophoreticlacquer.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -278,13 +278,13 @@
           <ul class="footer-list">
             <li><a href="Pretreatment.html">Pretreatment</a></li>
             <li><a href="PlatingCoating.html">Plating</a></li>
-            <li><a href="https://www.baumechemical.com/home/blackening">Blackening</a></li>
-            <li><a href="https://www.baumechemical.com/home/passivation">Passivation</a></li>
-            <li><a href="https://www.baumechemical.com/home/polishing">Polishing</a></li>
-            <li><a href="https://www.baumechemical.com/home/strippers">Strippers</a></li>
-            <li><a href="https://www.baumechemical.com/home/protective">Protective Treatment</a></li>
-            <li><a href="https://www.baumechemical.com/home/service">Customer Service</a></li>
-            <li><a href="https://www.baumechemical.com/home/equipment">Equipment</a></li>
+            <li><a href="blackening.html">Blackening</a></li>
+            <li><a href="passivation.html">Passivation</a></li>
+            <li><a href="polishing.html">Polishing</a></li>
+            <li><a href="strippers.html">Strippers</a></li>
+            <li><a href="protective.html">Protective Treatment</a></li>
+            <li><a href="service.html">Customer service</a></li>
+            <li><a href="equipment.html">Equipment</a></li>
           </ul>
         </nav>
 
