--- a/contact-us.html
+++ b/contact-us.html
@@ -374,13 +374,13 @@
           <ul class="footer-list">
             <li><a href="Pretreatment.html">Pretreatment</a></li>
             <li><a href="PlatingCoating.html">Plating</a></li>
-            <li><a href="https://www.baumechemical.com/home/blackening">Blackening</a></li>
-            <li><a href="https://www.baumechemical.com/home/passivation">Passivation</a></li>
-            <li><a href="https://www.baumechemical.com/home/polishing">Polishing</a></li>
-            <li><a href="https://www.baumechemical.com/home/strippers">Strippers</a></li>
-            <li><a href="https://www.baumechemical.com/home/protective">Protective Treatment</a></li>
-            <li><a href="https://www.baumechemical.com/home/service">Customer service</a></li>
-            <li><a href="https://www.baumechemical.com/home/equipment">Equipment</a></li>
+            <li><a href="blackening.html">Blackening</a></li>
+            <li><a href="passivation.html">Passivation</a></li>
+            <li><a href="polishing.html">Polishing</a></li>
+            <li><a href="strippers.html">Strippers</a></li>
+            <li><a href="protective.html">Protective Treatment</a></li>
+            <li><a href="service.html">Customer service</a></li>
+            <li><a href="equipment.html">Equipment</a></li>
           </ul>
         </nav>
 
