--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     <div class="grid">
       <!-- Pretreatment -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/QfsLZ0I.jpeg" alt="เคมีล้างผิวงาน Pretreatment"></picture>
+        <picture><img src="https://img5.pic.in.th/file/secure-sv1/image1fef99c038db1e2c9.jpeg" alt="เคมีล้างผิวงาน Pretreatment"></picture>
         <div class="body">
           <div class="badges"><span class="badge">Pretreatment</span><span class="badge">Cleaning</span></div>
           <h3 data-i18n-key="card_pret_title">เคมีล้างผิวงาน</h3>
@@ -395,42 +395,42 @@
       </article>
       <!-- Blackening -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/zA0NO7e.jpeg" alt="น้ำยารมดำโลหะ Blackening"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg" alt="น้ำยารมดำโลหะ Blackening"></picture>
         <div class="body">
           <div class="badges"><span class="badge">Blackening</span><span class="badge">Steel/Zinc/Copper/Brass/Aluminium</span></div>
           <h3 data-i18n-key="card_black_title">น้ำยารมดำโลหะ</h3>
           <p data-i18n-key="card_black_desc">งานรมดำ เพื่อเพิ่มความสวยงาม ป้องกันการกัดกร่อน และลดแสงสะท้อน สีสม่ำเสมอ คุมกระบวนการง่าย</p>
-          <a class="more" href="https://www.baumechemical.com/home/blackening" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="blackening.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Passivation -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/FovZyQU.jpeg" alt="โครเมตบนซิงค์ Passivation"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/image0bf24b1b63a4ca5fb.jpeg" alt="โครเมตบนซิงค์ Passivation"></picture>
         <div class="body">
           <div class="badges"><span class="badge">Passivation</span><span class="badge">Zinc Chromate</span></div>
           <h3 data-i18n-key="card_pass_title">โครเมตบนซิงค์</h3>
           <p data-i18n-key="card_pass_desc">ชิ้นงานมีอายุการใช้งานที่ยาวขึ้น เพิ่มความทนการกัดกร่อน การเคลือบสีติดแน่นและทนทานมากขึ้น</p>
-          <a class="more" href="https://www.baumechemical.com/home/passivation" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="passivation.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Polishing -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/AoVWL64.jpeg" alt="น้ำยากัดเงา Polishing"></picture>
+        <picture><img src="https://img5.pic.in.th/file/secure-sv1/thumbnail-5.jpg" alt="น้ำยากัดเงา Polishing"></picture>
         <div class="body">
           <div class="badges"><span class="badge">Polishing</span><span class="badge">Brightening</span></div>
           <h3 data-i18n-key="card_polish_title">น้ำยากัดเงาบนโลหะ</h3>
           <p data-i18n-key="card_polish_desc">การกัดเงาด้วยสารเคมี รวมถึงเพิ่มความสวยงามให้กับผลิตภัณฑ์ ปรับผิวให้เงางามสม่ำเสมอ ลดรอยก่อนชุบ</p>
-          <a class="more" href="https://www.baumechemical.com/home/polishing" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="polishing.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Strippers -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/RKlDWzM.png" alt="น้ำยาลอก Strippers"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/thumbnail-4.jpg" alt="น้ำยาลอก Strippers"></picture>
         <div class="body">
           <div class="badges"><span class="badge">Strippers</span><span class="badge">Selective</span></div>
           <h3 data-i18n-key="card_strip_title">น้ำยาลอกต่างๆ</h3>
           <p data-i18n-key="card_strip_desc">ลอกงานชุบ/สี ตรงจุด ควบคุมง่าย พร้อมสำหรับกระบวนการต่อไป เช่น การชุบ การพ่นสี หรือการเชื่อม</p>
-          <a class="more" href="https://www.baumechemical.com/home/strippers" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="strippers.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Protective Treatment -->
@@ -445,7 +445,7 @@
           </div>
           <h3 data-i18n-key="card_protect_title">น้ำยารักษาผิวชุบให้คงทน</h3>
           <p data-i18n-key="card_protect_desc">สร้างชั้นปกป้องให้กับพื้นผิวโลหะ ช่วยป้องกันการเกิดออกซิเดชั่นและการหมองคล้ำจากการใช้งานในระยะยาว</p>
-          <a class="more" href="https://www.baumechemical.com/home/protective" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="protective.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Service -->
@@ -455,7 +455,7 @@
           <div class="badges"><span class="badge">Service</span><span class="badge">On-site Support</span></div>
           <h3 data-i18n-key="card_service_title">งานบริการลูกค้า</h3>
           <p data-i18n-key="card_service_desc">ควบคุมคุณภาพอย่างละเอียด และให้คำปรึกษาโดยผู้เชี่ยวชาญ วางแผนคุมคุณภาพ และทดสอบหน้างาน</p>
-          <a class="more" href="https://www.baumechemical.com/home/service" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="service.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
       <!-- Equipment -->
@@ -465,7 +465,7 @@
           <div class="badges"><span class="badge">Equipment</span><span class="badge">Tools</span></div>
           <h3 data-i18n-key="card_equip_title">วัสดุอุปกรณ์</h3>
           <p data-i18n-key="card_equip_desc">การเลือกใช้อุปกรณ์และเครื่องมือที่เหมาะสม เป็นสิ่งสำคัญในกระบวนการชุบให้ได้ผลลัพธ์ที่มีคุณภาพสูง</p>
-          <a class="more" href="https://www.baumechemical.com/home/equipment" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
+          <a class="more" href="equipment.html" target="_blank" rel="noopener" data-i18n-key="card_more">ดูรายละเอียด →</a>
         </div>
       </article>
     </div>
@@ -573,13 +573,13 @@
           <ul class="footer-list">
             <li><a href="Pretreatment.html">Pretreatment</a></li>
             <li><a href="PlatingCoating.html">Plating</a></li>
-            <li><a href="https://www.baumechemical.com/home/blackening">Blackening</a></li>
-            <li><a href="https://www.baumechemical.com/home/passivation">Passivation</a></li>
-            <li><a href="https://www.baumechemical.com/home/polishing">Polishing</a></li>
-            <li><a href="https://www.baumechemical.com/home/strippers">Strippers</a></li>
-            <li><a href="https://www.baumechemical.com/home/protective">Protective Treatment</a></li>
-            <li><a href="https://www.baumechemical.com/home/service">Customer service</a></li>
-            <li><a href="https://www.baumechemical.com/home/equipment">Equipment</a></li>
+            <li><a href="blackening.html">Blackening</a></li>
+            <li><a href="passivation.html">Passivation</a></li>
+            <li><a href="polishing.html">Polishing</a></li>
+            <li><a href="strippers.html">Strippers</a></li>
+            <li><a href="protective.html">Protective Treatment</a></li>
+            <li><a href="service.html">Customer service</a></li>
+            <li><a href="equipment.html">Equipment</a></li>
           </ul>
         </nav>
 
