--- a/troubleshootingnickelsatin.html
+++ b/troubleshootingnickelsatin.html
@@ -293,15 +293,15 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="Pretreatment.html" data-i18n-key="cat_pretreat">เตรียมผิว (Pretreatment)</a></li>
-            <li><a href="PlatingCoating.html" data-i18n-key="cat_plating">ชุบเคลือบ (Plating)</a></li>
-            <li><a href="https://www.baumechemical.com/home/blackening" data-i18n-key="cat_black">ดำเคมี (Blackening)</a></li>
-            <li><a href="https://www.baumechemical.com/home/passivation" data-i18n-key="cat_passivation">พาสซิเวชัน (Passivation)</a></li>
-            <li><a href="https://www.baumechemical.com/home/polishing" data-i18n-key="cat_polishing">ขัดเงา (Polishing)</a></li>
-            <li><a href="https://www.baumechemical.com/home/strippers" data-i18n-key="cat_strippers">น้ำยาลอก (Strippers)</a></li>
-            <li><a href="https://www.baumechemical.com/home/protective" data-i18n-key="cat_protective">ปกป้องผิว (Protective Treatment)</a></li>
-            <li><a href="https://www.baumechemical.com/home/service" data-i18n-key="cat_service">บริการ (Customer Service)</a></li>
-            <li><a href="https://www.baumechemical.com/home/equipment" data-i18n-key="cat_equipment">อุปกรณ์ (Equipment)</a></li>
+            <li><a href="Pretreatment.html">Pretreatment</a></li>
+            <li><a href="PlatingCoating.html">Plating</a></li>
+            <li><a href="blackening.html">Blackening</a></li>
+            <li><a href="passivation.html">Passivation</a></li>
+            <li><a href="polishing.html">Polishing</a></li>
+            <li><a href="strippers.html">Strippers</a></li>
+            <li><a href="protective.html">Protective Treatment</a></li>
+            <li><a href="service.html">Customer service</a></li>
+            <li><a href="equipment.html">Equipment</a></li>
           </ul>
         </nav>
 
