--- a/troubleshootingcyanidezinc.html
+++ b/troubleshootingcyanidezinc.html
@@ -378,15 +378,15 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="ft_cat_title">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="Pretreatment.html" data-i18n-key="ft_cat_pretreat">Pretreatment</a></li>
-            <li><a href="PlatingCoating.html" data-i18n-key="ft_cat_plating">Plating</a></li>
-            <li><a href="https://www.baumechemical.com/home/blackening" data-i18n-key="ft_cat_black">Blackening</a></li>
-            <li><a href="https://www.baumechemical.com/home/passivation" data-i18n-key="ft_cat_pass">Passivation</a></li>
-            <li><a href="https://www.baumechemical.com/home/polishing" data-i18n-key="ft_cat_polish">Polishing</a></li>
-            <li><a href="https://www.baumechemical.com/home/strippers" data-i18n-key="ft_cat_strip">Strippers</a></li>
-            <li><a href="https://www.baumechemical.com/home/protective" data-i18n-key="ft_cat_protect">Protective Treatment</a></li>
-            <li><a href="https://www.baumechemical.com/home/service" data-i18n-key="ft_cat_service">Customer Service</a></li>
-            <li><a href="https://www.baumechemical.com/home/equipment" data-i18n-key="ft_cat_equipment">Equipment</a></li>
+            <li><a href="Pretreatment.html">Pretreatment</a></li>
+            <li><a href="PlatingCoating.html">Plating</a></li>
+            <li><a href="blackening.html">Blackening</a></li>
+            <li><a href="passivation.html">Passivation</a></li>
+            <li><a href="polishing.html">Polishing</a></li>
+            <li><a href="strippers.html">Strippers</a></li>
+            <li><a href="protective.html">Protective Treatment</a></li>
+            <li><a href="service.html">Customer service</a></li>
+            <li><a href="equipment.html">Equipment</a></li>
           </ul>
         </nav>
 
